# TikTok-Douyin-KuaiShou-Downloader-Android

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/kpkpkp/: ContextCompat.java  CustomWebViewClient.java  (+8 more)
app/src/main/jni/: CMakeLists.txt  database.cpp  database.h  definitions.h  douyin.h  editor.h  httplib.h  index.h  logging.cpp  markdown.h  nativelib.cpp  news.h  notes.h  shared.cpp  shared.h  toutiao.h  video.h  videos.h
app/src/main/jni/handlers/: image.cpp  image.h  kuaishou.cpp  kuaishou.h  listVideos.cpp  listVideos.h  mp4.cpp  mp4.h  note.cpp  note.h  tiktok.cpp  tiktok.h  twitter.cpp  twitter.h  xvideos.cpp  xvideos.h
app/src/main/jni/static/: 1.js  3.json  9.html  custom-bottom-bar.js  custom-bottom-sheet.js  custom-button.js  custom-buttons.js  custom-dialog-actions.js  custom-dialog-spinner.js  custom-dialog.js  custom-drawer - 副本.js  custom-drawer.js  custom-header.js  custom-items.js  custom-toast.js  custom-videos.js  editor - 副本.js  editor.css  editor.html  editor.js  index.css  index.html  index.js  markdown-it.min.js  markdown.css  markdown.html  markdown.js  news.html  notes.html  notes.js  shared.js  video.css  video.html  video.js  videos.html  videos.js
app/src/main/jni/static/css/: custom-videos.css  editor.css
app/src/main/jni/static/database/: 1.db  app.js  package-lock.json  videos.db
app/src/main/jni/文档/: README.md
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
